--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@ body {
 	background: #222;
 	font-family: 'Nunito', 'Arial Rounded', Helvetica, sans-serif;
 	font-weight: 300;
-	font-size: 14px;
+	font-size: 15px;
 	color:#fff; /* Fallback */
 	color:rgba(255,255,255,0.8);
 }
@@ -77,27 +77,35 @@ header {
 	width: 100%;
 	text-align: center;
 	overflow: hidden;
-	padding: 2em 0;
+	margin-bottom: 6em; /* Same as #content margins */
 }
 
 	header h1 {
-		font-size: 4em;
+		font-size: 6em;
 	}
 
 #wrapper {
 	min-height: 100%;
 	height: auto !important;
 	height: 100%;
-	margin: 0 auto -106px; /* the bottom margin is the negative value of the footer's height */
+	margin: 0 auto -120px; /* the bottom margin is the negative value of the footer's height */
 }
 
 #footer, .push {
-	height: 106px;
+	height: 120px;
 	clear: both;
+}
+
+#content {
+	margin: 6em 0;
 }
 
 p {
 	margin:.5em 0;
+}
+
+p, ol {
+	line-height: 1.5em;
 }
 
 a {
@@ -212,7 +220,7 @@ body#y-2012 {
 }
 
 body#y-2011 {
-	background: #DBC5B2 url(http://wintermix.kyledecker.me/2011/bg.jpg) no-repeat top center;
+	background: #37BCAF url(http://wintermix.kyledecker.me/2011/bg-grad.jpg) no-repeat top center;
 	-webkit-background-size: 100%;
 	-moz-background-size: 100%;
 	-o-background-size: 100%;
@@ -220,13 +228,51 @@ body#y-2011 {
 }
 
 @media all and (max-width: 1024px) {
-	body#y-2012, body#y-2011 {
+	body#y-2012 {
 		-webkit-background-size: 1024px;
 		-moz-background-size: 1024px;
 		-o-background-size: 1024px;
 		background-size: 1024px;
 	}
 }
+
+
+@media all and (max-width: 1186px) {
+	body#y-2011 {
+		-webkit-background-size: 1186px;
+		-moz-background-size: 1186px;
+		-o-background-size: 1186px;
+		background-size: 1186px;
+	}
+}
+
+  /*************/
+ /* Tracklist */
+/*************/
+
+ol#tracklist {
+	counter-reset: item;
+}
+
+	ol#tracklist li {
+		padding-left: 3em;
+		position: relative;
+		white-space: nowrap;
+		text-overflow: ellipsis;
+		overflow: hidden;
+	}
+
+	ol#tracklist li:before {
+		content: counter(item) " "; /* Numbers without periods */
+        counter-increment: item;
+        color: rgba(0,0,0,0.3);
+        position: absolute;
+        font-weight: 700;
+        display: block;
+        text-align: right;
+        width: 2em;
+        left: 0;
+	}
 
   /****************/
  /* Audio Player */
@@ -236,23 +282,31 @@ section#left, section#right {
 	float:left;
 	width:50%;
 }
-#player{
-	width:320px;
+
+@media all and (max-width: 640px) {
+	section#left, section#right {
+		width:100%;
+		float: none;
+	}
+}
+
+#player, #tracklist {
+	width:100%;
 	padding: 10px;
 	margin:0 auto;
 }
-#tracklist {
-	width:100%;
-	padding:10px;
-	overflow:hidden;
+
+#player {
+	max-width: 320px;
 }
+
 #progressbar_container{
 	width:100%;
 	height:10px;
 	border-radius:5px;
 	cursor:pointer;
 	margin-bottom: 10px;
-	background: rgba(0,0,0,0.8);
+	background: rgba(0,0,0,0.7);
 	overflow:hidden;
 	position: relative;
 }
@@ -265,17 +319,9 @@ section#left, section#right {
 	border-radius: 3px;
 	z-index:10;
 }
-#progressbar_buffer{
-	position: absolute;
-	height: 100%;
-	top:0;
-	left:0;
-	background-color: rgba(255,255,255,0.2);
-	z-index:9;
-}
 #controls{
 	width:100%;
-	padding:10px 30px;
+	padding:2em 30px;
 	/* evenly spaced buttons*/
 	text-align: justify;
 	-ms-text-justify: distribute-all-lines;
@@ -322,9 +368,32 @@ section#left, section#right {
 }
 
 #title{
-	font-size:1.2em;
+	font-size:1.4em;
+	color: #fff;
+	margin-bottom: 1em;
 	text-overflow: ellipsis;
 }
+a#download {
+	opacity:0.8;
+	text-transform: uppercase;
+	display:block;
+	border:4px solid #fff;
+	text-align: center;
+	padding:.8em 0;
+	border-radius:100px;
+	font-size:1.4em;
+	letter-spacing: 1px;
+	width:300px;
+	margin:10px auto;
+	transition: 0.3s cubic-bezier(.8,-1.5,.2,2);
+	-o-transition: 0.3s cubic-bezier(.8,-1,.2,2);
+	-moz-transition: 0.3s cubic-bezier(.8,-1,.2,2);
+	-webkit-transition: 0.3s cubic-bezier(.8,-1,.2,2);
+}
+
+	a#download:hover {
+		opacity:1;
+	}
 
   /************/
  /* Clearfix */
