--- a/style.css
+++ b/style.css
@@ -219,10 +219,11 @@ nav {
 	}
 
 #footer {
-	background:rgba(0,0,0,0.3);
+	background:rgba(0,0,0,0.1);
+	border-top:1px solid rgba(0,0,0,0.1);
 	width:100%;
 	text-align:center;
-	padding:2em;
+	padding:2em 1em;
 }
 
   /***********************/
