--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -281,6 +281,11 @@ h1, h2, h3, h4 {
 // Responsive goodness
 // 
 
+@media all and (max-width: 960px) {
+	.sidebar { width: 360px; }
+	.content { margin-left: 360px; }
+}
+
 @media all and (max-width: 800px) {
 	body { font-size: 17px; }
 
