Updated and compressed larger assets for retina

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -235,6 +235,7 @@ h1, h2, h3, h4 {
 	background-image: url(../img/icon-play.png);
 	background-position: center;
 	background-repeat: no-repeat;
+	background-size: 18px 18px;
 	border-radius: 2px;
 	width: 34px;
 	height: 34px;
