--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -70,7 +70,7 @@ h1, h2, h3, h4 {
 
 .wrapper {
 	margin:0 auto;
-	max-width: 900px;
+	max-width: 500px;
 }
 
 // 
@@ -91,9 +91,6 @@ h1, h2, h3, h4 {
 	padding: $spacing*2;
 	padding-left: $spacing*2+20px;
 	z-index: 5;
-	.wrapper {
-	//	background: url(../img/pinecone.jpg) no-repeat center 24px;
-	}
 	a {
 		color: #0066cc;
 		border-bottom: 1px solid #cdd7dd;
@@ -114,8 +111,6 @@ h1, h2, h3, h4 {
 }
 
 .about {
-	max-width: 500px;
-	margin: 0 auto;
 	padding-top: $spacing/2.5; // Same as .track-link
 }
 
@@ -139,6 +134,7 @@ h1, h2, h3, h4 {
 	background-repeat: no-repeat;
 	background-position: center top;
 	-webkit-transform: translate3D(0, 0, 0); // Force hardware acceleration to fix opacity transition flicker
+	.wrapper { max-width: 605px; }
 }
 
 .mix-header {
@@ -317,9 +313,13 @@ h1, h2, h3, h4 {
 		width: auto;
 	}
 
+	.mix { padding: $spacing; }
+
 	.content { margin-left: 0; }
 }
 
 @media all and (max-width: 400px) {
 	body { font-size: 15px; }
+	.mix { padding: $spacing 0 $spacing/2 0; }
+	.track-link { border-radius: 0; }	
 }
